Fix spacing and h2 font size on Profile page

--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -1631,9 +1631,10 @@ footer a:hover {
 @media screen and (max-width: 600px) {
   .profile-container {
     padding-top: 20px;
+    gap: 20px;
   }
   .profile-h2 {
-    font-size: 36px;
+    font-size: 24px;
   }
   .profile-content {
     flex-direction: column;
